--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -22,6 +22,9 @@
                         <a class="nav-link" th:href="@{/customer}">Customer</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" th:href="@{/bankaccount}">Bank Account</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" th:href="@{/login}">Login</a>
                     </li>
 
