--- a/src/main/resources/templates/bankaccount.html
+++ b/src/main/resources/templates/bankaccount.html
@@ -43,6 +43,7 @@
             <th>Customer ID</th>
             <th>Type</th>
             <th>Balance</th>
+            <th>Actions</th>
         </tr>
         </thead>
         <tbody>
@@ -51,6 +52,9 @@
             <td th:text="${bankAccount.customerId}"></td>
             <td th:text="${bankAccount.type}"></td>
             <td th:text="${bankAccount.balance}"></td>
+            <td>
+                <a th:href="@{/bankaccount/edit/{id} (id=${bankAccount.id})}"  class="btn btn-outline-primary">Edit</a>
+            </td>
         </tr>
         </tbody>
 
