--- a/src/main/resources/templates/bankaccount.html
+++ b/src/main/resources/templates/bankaccount.html
@@ -53,8 +53,17 @@
             <td th:text="${bankAccount.type}"></td>
             <td th:text="${bankAccount.balance}"></td>
             <td>
-                <a th:href="@{/bankaccount/edit/{id} (id=${bankAccount.id})}"  class="btn btn-outline-primary">Edit</a>
+<!--                <a th:href="@{/bankaccount/edit/{id} (id=${bankAccount.id})}"  class="btn btn-outline-primary">Edit</a>-->
+                <a th:href="@{/bankaccount/delete/{id} (id=${bankAccount.id})}"  class="btn btn-outline-danger">Delete</a>
+
+
+
+<!--                <form th:action="@{/bankaccount/delete/{id}(id=${account.id})}" method="POST">-->
+<!--                    <button type="submit" class="btn btn-danger">Delete</button>-->
+<!--                </form>-->
+
             </td>
+
         </tr>
         </tbody>
 
