--- a/src/main/resources/templates/bankaccount.html
+++ b/src/main/resources/templates/bankaccount.html
@@ -54,6 +54,8 @@
             <td th:text="${bankAccount.balance}"></td>
             <td>
 <!--                <a th:href="@{/bankaccount/edit/{id} (id=${bankAccount.id})}"  class="btn btn-outline-primary">Edit</a>-->
+                <a th:href="@{/bankaccount/withdraw/{id} (id=${bankAccount.id})}"  class="btn btn-outline-primary">Withdraw</a>
+                <a th:href="@{/bankaccount/deposit/{id} (id=${bankAccount.id})}"  class="btn btn-outline-warning">Deposit</a>
                 <a th:href="@{/bankaccount/delete/{id} (id=${bankAccount.id})}"  class="btn btn-outline-danger">Delete</a>
 
 
