--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -19,5 +19,9 @@
         <div class="form-group">
             <input type="submit" class="btn btn-primary">
         </div>
+        <div class="form-group">
+            <input type="submit" class="btn btn-primary" id="submitButton">
+        </div>
+
     </form>
 </div>
